# ICPHackathon

./: .gitignore  README.md  dev.sh  dfx.json  start.sh
frontend/: package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.minimal.tsx  App.simple.tsx  App.tsx  Dashboard.tsx  TestApp.tsx  api.ts  config.ts  environment.d.ts  main.tsx  polyfills.ts  react-app-env.d.ts  theme.ts
frontend/src/api/: canister.ts  index.ts
frontend/src/components/: AIControl.tsx  Dashboard.tsx  Layout.tsx  Navbar.tsx  Portfolio.tsx  ToastContainer.tsx
frontend/src/declarations/ai_canister/: ai_canister.did.d.ts  ai_canister.did.js  ai_canister.did.ts  index.ts
frontend/src/declarations/store_canister/: index.ts  store_canister.did.d.ts  store_canister.did.js  store_canister.did.ts
frontend/src/services/: auth.ts  canister.ts  mockAuth.ts  mockCanister.ts
src/ai_canister/: Cargo.toml  ai_canister.did  lib.rs
src/declarations/store_canister/: index.d.ts  index.js  store_canister.did  store_canister.did.d.ts  store_canister.did.js
src/store_canister/: main.mo
src/store_canister/tests/: test.mo
